# dataframe_handlers

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
dataframe_handlers/: __init__.py  base.py  dask_handler.py  pandas_handler.py  test_handlers.py  vaex_handler.py  xarray_handler.py
dataframe_handlers/base/: __init__.py  base.py
dataframe_handlers/dask_handler/: __init__.py  dask_handler.py
dataframe_handlers/pandas_handler/: __init__.py  pandas_handler.py
dataframe_handlers/tests/: __init__.py  base.py  test_dask_handler.py  test_pandas_handler.py  test_vaex_handler.py  test_xarray_handler.py
dataframe_handlers/vaex_handler/: __init__.py  vaex_handler.py
dataframe_handlers/xarray_handler/: __init__.py  xarray_handler.py
tests/: base.py  test_dask_handler.py  test_pandas_handler.py  test_vaex_handler.py  test_xarray_handler.py
