[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "dataframe_handlers"
version = "0.0.1"
description = "A package for handling dataframes with optional backends."
authors = [{name="Joshua Sundance Bailey"}]
maintainers = [{name="Joshua Sundance Bailey"}]
license = {text="MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["dataframe", "interoperability"]

[project.urls]
Repository = "https://github.com/joshuasundance-swca/dataframe_handlers.git"

# Define optional dependencies
[project.optional-dependencies]
pandas = ["pandas"]
dask = ["dask[dataframe]", "pandas"]
#vaex = ["vaex"]
xarray = ["xarray"]
testing = [
    "coverage",
    "coverage-badge",
    "dask[dataframe]",
    "numpy",
#    "vaex",
    "pandas",
    "pytest",
    "xarray",
]
